2014-06-01 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Fixed array integrity after pre-processor calls, resolves #56186

2014-05-30 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Removed invalid use of "value" property in MM handling, resolves #59240
	* Formalized deprecation of old properties, resolves #59222

2014-05-22 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added support for one to many relations in mapping, resolves #52664

2014-05-15 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Cleaned up some CGL violations, resolves #51686

2014-05-08 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added possibility to apply XPath query directly on current node, resolves #51534

2014-05-02 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Moved documentation to reStructuredText, resolves #58360

2014-04-30 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected wrong property name in soft matching process, resolves #56629

2014-04-27 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Ensured compatibility with TYPO3 CMS 6.2, resolves #56629

2013-08-20 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Improved empty check for external reference values, resolves #51200
	* Corrected various errors in the manual, resolves #50626

2013-07-22 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Fixed erroneous registration of error messages, resolves #49383
	* Corrected handling of limitless execution time for ExtJS calls, resolves #43941
	* Fixed wrong evaluation of rights to synchronization action, resolves #49415
	* Ensured compatibility with TYPO3 CMS 6.1, resolves #50294
	* Released version 2.2.0

2013-01-24 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 2.1.0

2013-01-23  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added possibility to tap reference nodes directly in XML, resolves #30015

2013-01-18  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Ensured compatibility with TYPO3 CMS 6.0, resolves #44303
